# ffxiv-huntmaps-maker

./: .gitignore  ERROR_HANDLING_REVIEW.md  LICENSE  README.md  TEST_BASELINE.md  annotate.py  helpers.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  pythonpackage.yml
data/: config.yaml  marks.json  zone_info.yaml
tests/: README.md  __init__.py  conftest.py  test_annotate.py  test_encoding.py  test_error_handling.py  test_helpers.py
